--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="png" href="/src/assets/icons/instadash.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InstaDash</title>
+    <title>Dashed Eats</title>
   </head>
   <body>
     <div id="root"></div>
