--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- class="h-full w-full overflow-x-hidden mx-0" -->
